<resources>
    <string name="app_name">My Movie Library</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_search">Search</string>
    <string name="tab_library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="error_message">Failed to get results, please try again.</string>
    <string name="search_a_movie">Search a movie</string>
    <string name="search_movie">Search movie</string>
    <string name="add_to_my_favorites">Add to my favorites</string>
    <string name="general">General</string>
    <string name="release">Release date</string>
    <string name="duration">Duration</string>
    <string name="genres">Genres</string>
    <string name="producers">Producers</string>
    <string name="trailer">Trailer</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="watch_behind_scene">Watch Behind The Scenes</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="watched_movies">Watched Movies</string>
    <string name="will_watched_movies">Will Watch Movies</string>
    <string name="watched">Watched</string>
    <string name="will_watched">Will Watch</string>
    <string name="all_movies">All Movies</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="view_similar_movies">View Similar Movies</string>
    <string name="remove_from_favorites">Remove from my favorites</string>
    <string name="add_to_favorites">Add to my favorites</string>
    <string name="favorites_removed_1">Removed</string>
    <string name="favorites_removed_2">from your favorites</string>
    <string name="favorites_added_1">Added</string>
    <string name="favorites_added_2">to your favorites</string>
    <string name="unknown">Onbekend</string>
    <string name="recommended_movies">Recommended For You</string>
    <string name="results_heading">results for</string>
    <string name="no_favorite_movies">You don\'t have any favorite movies. Add one by going to a movie\'s detail page.</string>
    <string name="no_description">No description available</string>
    <string name="no_trailer">No trailer available</string>
    <string name="add_my_library">Add My Library</string>
    <string name="view_all_movies">View All Movies</string>
    <string name="update_in_library">Update in My Library</string>
    <string name="rate_movie">Rate Movie</string>
    <string name="add_to_watched">Add To Watched</string>
    <string name="remove_from_watched">Remove From Watched</string>
    <string name="add_to_will_watched">Add To Will Watch</string>
    <string name="remove_from_will_watched">Remove From Will Watch</string>
    <string name="add_comment_about_film">Add comments about the film</string>
    <string name="write_something">Write Something...</string>
    <string name="movie_added">Movie is added</string>
    <string name="movie_updated">Movie is updated</string>
    <string name="movie_deleted">Movie is deleted</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="movie_not_in_library">This movie is not already in the library</string>
    <string name="my_library">My Library</string>
    <string name="others">others</string>
    <string name="please_write_something">Please write something to search bar</string>
    <string name="have_no_favorite_movies">You have no favorite movies yet</string>
    <string name="have_no_watched_movies">You have no watched movies yet</string>
    <string name="have_no_will_watched_movies">You have no movies to watch yet</string>
    <string name="have_no_all_movies">You have no movies in your library yet</string>
    <string name="birth_day">Birthday: </string>
    <string name="death_day">Death Day: </string>
    <string name="place_of_birth">Place of Birth: </string>
    <string name="biograhpy">Biography</string>
    <string name="comment_exist">You made comments</string>
    <string name="comment_not_exist">You have no comments</string>
    <string name="high_rated_first">High-rated ones before</string>
    <string name="low_rated_first">Low-rated ones before</string>
    <string name="based_name">By Name</string>
    <string name="favorites_first">Favorites first</string>
    <string name="watched_first">Watched first</string>
    <string name="will_watch_first">Will watch first</string>
    <string name="list_movies">List Movies</string>
    <string name="search_movies">Search Movies</string>
    <string name="library_movies">Movies in My Library</string>
    <string name="list_movies_desc">You can list the trend movies, now playing movies and the upcoming movies and add them to your library</string>
    <string name="search_movies_desc">You can search for the movies you want to add to your library</string>
    <string name="library_movies_desc">You can add your movies to your favorites. You can mark it as watched or will be watched. You can vote movies.</string>
    <string name="total_fil_count">Total movie count:</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="by_genre_movies">By Genre</string>
    <string name="by_top_twohundred">Top 250</string>
    <string name="in_favorites">In Favorites</string>
    <string name="in_watched">Watched</string>
    <string name="in_will_watched">Will Watch</string>
    <string name="view_movie_details">View movie details</string>
    <string name="search">Search</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="CONTACTS">CONTACTS</string>
    <string name="error">Error:</string>
    <string name="errorUpper">ERROR</string>
    <string name="addPersonToGroup">Add Friend to Group</string>
    <string name="selectLeastOneFriend">You must choose at least 1 person!</string>
    <string name="selectOneFriend">Please select a friend!</string>
    <string name="selectOneGroup">Please select a group!</string>
    <string name="addGroupName">Add group name</string>
    <string name="pleaseWriteGroupName">The group name cannot be empty!</string>
    <string name="deviceHasNoCamera">Device has no camera!</string>
    <string name="writeGroupName">Write group name…</string>
    <string name="defineGroupNameAndIcon">Specify group name and icon</string>
    <string name="participant"> participants</string>
    <string name="constantItem">item</string>
    <string name="adminText">  Administrator  </string>
    <string name="selectPicture">Select Picture</string>
    <string name="openCamera">Open Camera</string>
    <string name="openGallery">Open Gallery</string>
    <string name="REMOVE_PHOTO">Remove photo</string>
    <string name="EDIT">Edit</string>
    <string name="chooseProfilePhoto">Choose a profile photo</string>
    <string name="CHOOSE_GROUP_PHOTO">Choose a group photo</string>
    <string name="areYouSureExitFromGroup">Are you sure you want to leave the group?</string>
    <string name="upperYes">YES</string>
    <string name="lowerYes">Yes</string>
    <string name="upperNo">NO</string>
    <string name="removeFromGroup">  Remove from the group</string>
    <string name="createdAt">Created at:</string>
    <string name="completedAt">Completed at:</string>
    <string name="changeAsAdmin">Make Group Admin</string>
    <string name="secondShort">sec</string>
    <string name="searchGroup">Search Group</string>
    <string name="searchContact">Search Contact</string>
    <string name="writetaskdesc">Write something…</string>
    <string name="UPDATING">Updating…</string>
    <string name="VIEW_PENDING_REQUEST">View Pending Requests</string>
    <string name="PHONE_NUM">Phone Number</string>
    <string name="SELECT_COUNTRY">Select Country</string>
    <string name="COUNTRY_NAME">Country Name</string>
    <string name="WRITE_PHONE_NUMBER">Write phone number</string>
    <string name="PLEASE_WRITE_VERIFICATION_CODE">Enter the 6 digit confirmation code that we send this number : </string>
    <string name="SEND_VERIFICATION_CODE_AGAIN">Send Code Again</string>
    <string name="CHANGE_PHONE_NUMBER">Change Phone Number</string>
    <string name="INVALID_VERIFICATION_CODE_ENTERED">Invalid verification code entered</string>
    <string name="VERIFY">Verify</string>
    <string name="REMAINING_TIME">Remaining Time : </string>
    <string name="NOT_ENTERED_VERIFY_CODE_IN_TIME">You did not enter the code within the given time. Please send the code again!</string>
    <string name="UPDATE_IS_SUCCESSFUL">Update is Successful</string>
    <string name="THERE_IS_NO_SEARCH_RESULT">No results found.</string>
    <string name="TAKE_SCREENSHOT">Take screenshot</string>
    <string name="CIRCLE_THE_PROBLEM">Take the problem round</string>
    <string name="SCREENSHOT">Take</string>
    <string name="searchUser">Search user…</string>
    <string name="IN_GROUP">In Group</string>
    <string name="REMOVE">Remove</string>
    <string name="REMOVE_FOLLOWER_TITLE">Remove Friend?</string>
    <string name="REMOVE_FOLLOWER_MESSAGE">Are you sure you want to remove this person from friends?</string>
    <string name="SEARCH_FRIENDS">Search friends…</string>
    <string name="USER_NOT_FOUND">User not found.</string>
    <string name="GROUP_NOT_FOUND">Group not found.</string>
    <string name="cancelSendedRequest">The friend request sent will be withdrawn. Do you confirm?</string>
    <string name="searchUsers">Search Users</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="giveNewName">Write New Group Name</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="rateus">Rate Us</string>
    <string name="commentFailed">Install an application market</string>
    <string name="gpsSettings">GPS Settings</string>
    <string name="gpsSettingMessage">GPS is not enabled. Click on setting to enable and get location, please start app again after turning on GPS.</string>
    <string name="settings">Settings</string>
    <string name="groupsShareText">Groups</string>
    <string name="tasksmyassigned">The tasks I have assigned</string>
    <string name="tasksmyassignedDesc">Assignments</string>
    <string name="signOut">Sign Out</string>
    <string name="invite">Invite</string>
    <string name="request_sended">Request sent</string>
    <string name="PENDING_REQUESTS">Pending Requests</string>
    <string name="THERE_IS_NO_PENDING_REQUEST">There is no pending request</string>
    <string name="CONTACT_INVITE_MESSAGE">Do you want to follow group and friend tasks with the My Duties app? You can download the application from this link:</string>
    <string name="INVITE_YOUR_FRIENDS">Invite Your Friends</string>
    <string name="ADD_YOUR_FRIENDS">Add Your Friends</string>
    <string name="ACCOUNT">Account</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="SUPPORT">Support</string>
    <string name="HELP_CENTER">About App</string>
    <string name="REPORT_PROBLEM">Report a Problem</string>
    <string name="CONTACT_FRIENDS">Contact Friends</string>
    <string name="VERSION">Version</string>
    <string name="ABOUT_APP">My Movie Library: If you have any questions
        or suggestions about the application, please write to us.
    </string>
    <string name="authoremail">mydutiess@gmail.com</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="googleSignInFailed">Google sign in failed</string>
</resources>