<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <include layout="@layout/custom_search_layout" />

        <Button
            android:id="@+id/btn_search_movie"
            android:layout_width="match_parent"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:maxHeight="40dp"
            android:minHeight="40dp"
            android:text="@string/search_movie"
            android:background="@drawable/btn_styling" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/White"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_recommended_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/recommended_movies"
                android:textSize="15sp"
                android:textColor="@color/White"
                android:layout_weight="7"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:padding="1dp"
                android:src="@drawable/refresh_icon"
                android:id="@+id/imgvRefresh" />


        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlProgressBar"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textSize="17sp"
                android:visibility="invisible"
                android:padding="16dp"
                android:textColor="@color/White"/>

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:visibility="visible" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>
