<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#121212"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgvProfile"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:cropToPadding="false"
                android:scaleType="centerCrop" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:fontFamily="@font/lato_family"/>

                <!-- Birthday -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/llBirthday">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/Red"
                        android:textSize="17sp"
                        android:text="@string/birth_day"
                        android:fontFamily="@font/lato_family" />

                    <TextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <!-- Death day -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/llDeathday">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/Red"
                        android:textSize="17sp"
                        android:text="@string/death_day"
                        android:fontFamily="@font/lato_family"/>

                    <TextView
                        android:id="@+id/tvDeathday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <!-- PlaceOfBirth -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/llBirthPlace">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/Red"
                        android:textSize="17sp"
                        android:text="@string/place_of_birth"
                        android:fontFamily="@font/lato_family"/>

                    <TextView
                        android:id="@+id/tvBirthPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="italic"/>

                </LinearLayout>

                <!-- Biograhpy -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:id="@+id/llBiograhpy">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Red"
                        android:textSize="17sp"
                        android:text="@string/biograhpy"
                        android:gravity="start"
                        android:fontFamily="@font/lato_family"/>

                    <TextView
                        android:id="@+id/tvBiograhpy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:layout_marginTop="5dp"
                        android:textStyle="italic"/>

                </LinearLayout>


                <Button
                    android:id="@+id/btnViewAllMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:height="30dp"
                    android:background="@drawable/btn_styling"
                    android:maxHeight="40dp"
                    android:minHeight="40dp"
                    android:text="@string/view_all_movies"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llfacebook">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/facebook_icon"
                        android:layout_marginStart="15dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/tvFacebookAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/lato_family" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/llinstagram"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/instagram_icon"
                        android:layout_marginStart="15dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/tvInstagramAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/lato_family" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/lltwitter"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/twitter_icon"
                        android:layout_marginStart="15dp">

                    </ImageView>

                    <TextView
                        android:id="@+id/tvTwitterAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/lato_family" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textSize="22sp"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
